--- a/css/teachers.css
+++ b/css/teachers.css
@@ -12,6 +12,8 @@ body {
     padding-top: 150px;
 }
 
+
+
 html {
     scroll-behavior: smooth;
   }
@@ -286,6 +288,10 @@ section {
     margin-bottom: 8px;
 }
 
+.footer_content p{
+  max-width: 440px;
+}
+
 .footer_paragraph {
     margin-bottom: 40px;
     margin-top: 40px;
@@ -340,7 +346,7 @@ hr {
     flex: 2; 
   }
 .logo_white {
-    margin-top: 20px; 
+    margin-top: 50px; 
 }
 
 @media (max-width: 768px) {
