--- a/css/kids_dance.css
+++ b/css/kids_dance.css
@@ -123,7 +123,7 @@ header {
   transform: scale(1.1);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   header {
     height: 100px;
   }
@@ -237,7 +237,7 @@ header {
   gap: 150px;
   max-width: 90%;
   margin: auto;
-  height: 400px;
+  min-height: 400px;
   align-items: start;
 }
 
@@ -245,7 +245,7 @@ section {
   padding-bottom: 200px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .about_us_container_first {
     flex-direction: column;
     align-items: center;
@@ -280,7 +280,7 @@ section {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   section {
     padding-bottom: 80px;
   }
@@ -394,7 +394,7 @@ hr {
   margin-top: 50px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .footer_content {
     display: grid;
     grid-template-columns: 1fr;
